--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "keywords": [],
   "author": "Godoy",
   "license": "GPL-3.0",
-
   "main": "server.ts",
   "scripts": {
     "test": "jest",
@@ -13,21 +12,33 @@
     "dev": "yarn test && docker-compose build && docker-compose up"
   },
   "jest": {
-        "testMatch": ["<rootDir>/tests/**/*.test.ts"],
-        "moduleFileExtensions": ["ts", "js", "json", "node"],
-        "transform": { "^.+\\.(ts)$": "ts-jest" }
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ],
+    "transform": {
+      "^.+\\.(ts)$": "ts-jest"
+    }
   },
   "dependencies": {
-    "express": "^4.17.1",
     "@types/express": "^4.17.13",
-    "typescript": "^4.5.5",
-    "ts-node": "^10.4.0"
+    "@types/node": "^20.9.0",
+    "express": "^4.17.1",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.4.0",
+    "typeorm": "^0.3.17",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
-    "ts-jest": "^27.0.3",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.3"
   }
 }
